--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
         h1 {
             color: #333;
             margin-bottom: 20px;
+            font-size: 2em;
+        }
+
+        .container {
+            width: 100%;
+            max-width: 800px;
+            background-color: #fff;
+            padding: 30px;
+            border-radius: 20px;
+            box-shadow: 0 8px 16px rgba(0,0,0,0.1);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         #video, #capturedImage {
@@ -49,6 +62,7 @@
             gap: 15px;
             flex-wrap: wrap;
             margin-bottom: 20px;
+            width: 100%;
         }
 
         button {
@@ -109,20 +123,23 @@
             color: #555;
         }
 
-        /* Additional Styling for Enhanced Aesthetics */
-        .container {
-            width: 100%;
-            max-width: 800px;
-            background-color: #fff;
-            padding: 30px;
-            border-radius: 20px;
-            box-shadow: 0 8px 16px rgba(0,0,0,0.1);
-        }
-
         .footer {
             margin-top: auto;
             font-size: 14px;
             color: #888;
+        }
+
+        /* Additional Styling for Enhanced Aesthetics */
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .footer {
+            width: 100%;
+            text-align: center;
+            padding-top: 20px;
         }
     </style>
 </head>
@@ -176,6 +193,7 @@
             try {
                 stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" }, audio: false });
                 video.srcObject = stream;
+                video.style.opacity = 1;
             } catch (err) {
                 console.error("Không thể truy cập camera: ", err);
                 alert("Không thể truy cập camera. Vui lòng kiểm tra quyền truy cập hoặc thiết bị của bạn.");
