--- a/index.html
+++ b/index.html
@@ -117,29 +117,67 @@
             text-align: center;
         }
 
+        /* Loading Spinner Styles */
+        .spinner {
+            border: 4px solid #f3f3f3;
+            border-top: 4px solid #4CAF50;
+            border-radius: 50%;
+            width: 30px;
+            height: 30px;
+            animation: spin 1s linear infinite;
+            display: inline-block;
+            vertical-align: middle;
+            margin-left: 10px;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
         #loadingModel, #loadingPrediction {
             margin-top: 20px;
             font-size: 18px;
             color: #555;
-        }
-
-        .footer {
-            margin-top: auto;
-            font-size: 14px;
-            color: #888;
-        }
-
-        /* Additional Styling for Enhanced Aesthetics */
-        .container {
             display: flex;
-            flex-direction: column;
             align-items: center;
+            justify-content: center;
         }
 
         .footer {
             width: 100%;
             text-align: center;
             padding-top: 20px;
+            font-size: 14px;
+            color: #888;
+        }
+
+        /* Zoom Control Styling */
+        .zoom-container {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            margin-bottom: 20px;
+            width: 100%;
+            max-width: 600px;
+        }
+
+        .zoom-container label {
+            font-size: 16px;
+            color: #333;
+            flex: 0 0 auto;
+        }
+
+        .zoom-container input[type="range"] {
+            flex: 1 1 auto;
+        }
+
+        .zoom-container span {
+            font-size: 16px;
+            color: #333;
+            flex: 0 0 auto;
+            width: 40px;
+            text-align: right;
         }
     </style>
 </head>
@@ -151,14 +189,26 @@
         <img id="capturedImage" alt="Ảnh đã chụp">
         <canvas id="canvas" style="display: none;"></canvas>
 
+        <div class="zoom-container">
+            <label for="zoomSlider">Zoom:</label>
+            <input type="range" id="zoomSlider" min="1" max="3" step="0.1" value="1">
+            <span id="zoomValue">1x</span>
+        </div>
+
         <div class="button-container">
             <button id="captureButton" aria-label="Chụp ảnh" disabled>Chụp Ảnh</button>
             <button id="downloadButton" aria-label="Tải ảnh xuống">Tải Ảnh Xuống</button>
             <button id="retakeButton" aria-label="Chụp lại">Chụp Lại</button>
         </div>
 
-        <div id="loadingModel">Đang tải mô hình...</div>
-        <div id="loadingPrediction" style="display: none;">Đang nhận diện...</div>
+        <div id="loadingModel">
+            Đang tải mô hình...
+            <div class="spinner"></div>
+        </div>
+        <div id="loadingPrediction" style="display: none;">
+            Đang nhận diện...
+            <div class="spinner"></div>
+        </div>
         <div id="predictionResult" aria-live="polite">Kết quả nhận diện sẽ hiển thị ở đây.</div>
     </div>
 
@@ -181,17 +231,29 @@
         const predictionResult = document.getElementById('predictionResult');
         const loadingModel = document.getElementById('loadingModel');
         const loadingPrediction = document.getElementById('loadingPrediction');
+        const zoomSlider = document.getElementById('zoomSlider');
+        const zoomValue = document.getElementById('zoomValue');
         let stream = null;
+        let isProcessing = false; // Flag to prevent multiple processing
 
         // Thông tin mô hình Teachable Machine
         const MODEL_URL = "https://teachablemachine.withgoogle.com/models/7y8Dc7os8/";
 
         let model, maxPredictions;
 
-        // Hàm khởi chạy camera
+        /**
+         * Hàm khởi chạy camera
+         */
         async function startCamera() {
             try {
-                stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" }, audio: false });
+                stream = await navigator.mediaDevices.getUserMedia({
+                    video: {
+                        facingMode: "environment",
+                        width: { ideal: 1280 },
+                        height: { ideal: 720 }
+                    },
+                    audio: false
+                });
                 video.srcObject = stream;
                 video.style.opacity = 1;
             } catch (err) {
@@ -200,35 +262,71 @@
             }
         }
 
-        // Hàm dừng camera
+        /**
+         * Hàm dừng camera
+         */
         function stopCamera() {
             if (stream) {
                 stream.getTracks().forEach(track => track.stop());
             }
         }
 
-        // Hàm chụp ảnh
+        /**
+         * Hàm chụp ảnh với zoom
+         */
         async function capturePhoto() {
-            const context = canvas.getContext('2d');
-            canvas.width = video.videoWidth;
-            canvas.height = video.videoHeight;
-            context.drawImage(video, 0, 0, canvas.width, canvas.height);
-            const imageDataURL = canvas.toDataURL('image/png');
-            capturedImage.src = imageDataURL;
-            capturedImage.style.display = 'block';
-            capturedImage.style.opacity = 1;
-            video.style.opacity = 0;
-            video.style.display = 'none';
-            downloadButton.style.display = 'inline-block';
-            retakeButton.style.display = 'inline-block';
-            captureButton.style.display = 'none';
-            predictionResult.textContent = "";
-            loadingPrediction.style.display = 'block';
-            await predictImage();
+            if (isProcessing) return; // Prevent multiple clicks
+            isProcessing = true;
+            captureButton.disabled = true;
+
+            try {
+                const context = canvas.getContext('2d');
+                const zoom = parseFloat(zoomSlider.value);
+                const videoWidth = video.videoWidth;
+                const videoHeight = video.videoHeight;
+
+                if (videoWidth === 0 || videoHeight === 0) {
+                    throw new Error("Video chưa sẵn sàng.");
+                }
+
+                // Tính toán kích thước và vị trí cắt dựa trên zoom
+                const scaledWidth = videoWidth / zoom;
+                const scaledHeight = videoHeight / zoom;
+                const sx = (videoWidth - scaledWidth) / 2;
+                const sy = (videoHeight - scaledHeight) / 2;
+
+                canvas.width = videoWidth;
+                canvas.height = videoHeight;
+                context.drawImage(video, sx, sy, scaledWidth, scaledHeight, 0, 0, videoWidth, videoHeight);
+
+                const imageDataURL = canvas.toDataURL('image/png');
+                capturedImage.src = imageDataURL;
+                capturedImage.style.display = 'block';
+                capturedImage.style.opacity = 1;
+                video.style.opacity = 0;
+                video.style.display = 'none';
+                downloadButton.style.display = 'inline-block';
+                retakeButton.style.display = 'inline-block';
+                captureButton.style.display = 'none';
+                predictionResult.textContent = "";
+                loadingPrediction.style.display = 'flex';
+                await predictImage();
+            } catch (error) {
+                console.error("Lỗi khi chụp ảnh: ", error);
+                alert("Đã xảy ra lỗi khi chụp ảnh. Vui lòng thử lại.");
+            } finally {
+                isProcessing = false;
+                if (model) {
+                    captureButton.disabled = false;
+                }
+            }
         }
 
-        // Hàm tải ảnh xuống
+        /**
+         * Hàm tải ảnh xuống
+         */
         function downloadPhoto() {
+            if (!capturedImage.src) return; // Prevent download if no image
             const link = document.createElement('a');
             link.href = capturedImage.src;
             link.download = 'anh-chup.png';
@@ -237,7 +335,9 @@
             document.body.removeChild(link);
         }
 
-        // Hàm chụp lại
+        /**
+         * Hàm chụp lại
+         */
         function retakePhoto() {
             capturedImage.style.display = 'none';
             capturedImage.style.opacity = 0;
@@ -247,6 +347,10 @@
             retakeButton.style.display = 'none';
             captureButton.style.display = 'inline-block';
             predictionResult.textContent = "Kết quả nhận diện sẽ hiển thị ở đây.";
+
+            // Clear canvas
+            const context = canvas.getContext('2d');
+            context.clearRect(0, 0, canvas.width, canvas.height);
         }
 
         // Sự kiện khi nhấn nút chụp ảnh
@@ -258,7 +362,14 @@
         // Sự kiện khi nhấn nút chụp lại
         retakeButton.addEventListener('click', retakePhoto);
 
-        // Hàm tải mô hình Teachable Machine
+        // Sự kiện khi thay đổi zoom
+        zoomSlider.addEventListener('input', () => {
+            zoomValue.textContent = `${zoomSlider.value}x`;
+        });
+
+        /**
+         * Hàm tải mô hình Teachable Machine
+         */
         async function loadModel() {
             const modelURLFull = MODEL_URL + "model.json";
             const metadataURL = MODEL_URL + "metadata.json";
@@ -276,7 +387,9 @@
             }
         }
 
-        // Hàm nhận diện hình ảnh
+        /**
+         * Hàm nhận diện hình ảnh
+         */
         async function predictImage() {
             if (!model) {
                 predictionResult.textContent = "Mô hình chưa được tải. Vui lòng thử lại sau.";
