--- a/index.html
+++ b/index.html
@@ -67,13 +67,14 @@
             position: absolute;
             top: 50%;
             left: 50%;
-            width: 80%;
-            height: 80%;
+            width: 70%; /* Thu nhỏ từ 80% xuống 70% */
+            height: 70%; /* Thu nhỏ từ 80% xuống 70% */
             transform: translate(-50%, -50%);
             border: 4px dashed rgba(76, 175, 80, 0.7);
             background-color: rgba(0, 0, 0, 0.2); /* Màu mờ */
             pointer-events: none; /* Không can thiệp vào các sự kiện */
             border-radius: 15px;
+            display: none; /* Ẩn mặc định */
         }
 
         .button-container {
@@ -158,6 +159,22 @@
             color: #555;
             text-align: center;
             max-width: 600px;
+            position: relative;
+        }
+
+        /* Khung mờ cho ý nghĩa biển báo */
+        #signMeaning::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.1); /* Màu mờ */
+            backdrop-filter: blur(5px); /* Hiệu ứng mờ */
+            border-radius: 8px;
+            z-index: -1;
         }
 
         /* Loading Spinner Styles */
@@ -281,6 +298,7 @@
         const loadingPrediction = document.getElementById('loadingPrediction');
         const zoomSlider = document.getElementById('zoomSlider');
         const zoomValue = document.getElementById('zoomValue');
+        const overlay = document.querySelector('.overlay'); // Lấy phần tử overlay
         let stream = null;
         let isProcessing = false; // Flag to prevent multiple processing
 
@@ -315,6 +333,7 @@
                     video.play();
                 };
                 video.style.opacity = 1;
+                overlay.style.display = 'block'; // Hiển thị overlay khi camera mở
             } catch (err) {
                 console.error("Không thể truy cập camera: ", err);
                 alert("Không thể truy cập camera. Vui lòng kiểm tra quyền truy cập hoặc thiết bị của bạn.");
@@ -328,6 +347,7 @@
             if (stream) {
                 stream.getTracks().forEach(track => track.stop());
             }
+            overlay.style.display = 'none'; // Ẩn overlay khi dừng camera
         }
 
         /**
@@ -364,6 +384,7 @@
                 capturedImage.style.opacity = 1;
                 video.style.opacity = 0;
                 video.style.display = 'none';
+                overlay.style.display = 'none'; // Ẩn overlay khi chụp ảnh
                 downloadButton.style.display = 'inline-block';
                 retakeButton.style.display = 'inline-block';
                 captureButton.style.display = 'none';
@@ -408,6 +429,7 @@
             captureButton.style.display = 'inline-block';
             predictionResult.textContent = "Kết quả nhận diện sẽ hiển thị ở đây.";
             signMeaning.textContent = "";
+            overlay.style.display = 'block'; // Hiển thị lại overlay khi chụp lại
 
             // Clear canvas
             const context = canvas.getContext('2d');
