--- a/index.html
+++ b/index.html
@@ -342,22 +342,26 @@
          */
         async function startCamera() {
             try {
-                stream = await navigator.mediaDevices.getUserMedia({
+                const isMobile = /Mobi|Android/i.test(navigator.userAgent);
+                const constraints = {
                     video: {
-                        // facingMode: "user" // Thay đổi này để sử dụng camera trước
-                        // Để linh hoạt hơn, không đặt facingMode để trình duyệt chọn camera mặc định
+                        facingMode: isMobile ? "environment" : "user",
+                        width: { ideal: 1280 },
+                        height: { ideal: 720 }
                     },
                     audio: false
-                });
+                };
+                stream = await navigator.mediaDevices.getUserMedia(constraints);
                 video.srcObject = stream;
                 video.onloadedmetadata = () => {
                     video.play();
                 };
                 video.style.opacity = 1;
-                overlay.style.display = 'block'; // Hiển thị overlay khi camera mở
+                overlay.style.display = 'block'; // Show overlay when camera starts
+                console.log("Camera started. Device type:", isMobile ? "Mobile (back camera)" : "Desktop (front camera)");
             } catch (err) {
-                console.error("Không thể truy cập camera: ", err);
-                alert("Không thể truy cập camera. Vui lòng kiểm tra quyền truy cập hoặc thiết bị của bạn.");
+                console.error("Cannot access camera: ", err);
+                alert("Cannot access camera. Please check your permissions or device.");
             }
         }
 
@@ -369,6 +373,7 @@
                 stream.getTracks().forEach(track => track.stop());
             }
             overlay.style.display = 'none'; // Ẩn overlay khi dừng camera
+            console.log("Camera stopped.");
         }
 
         /**
@@ -378,12 +383,16 @@
             if (isProcessing) return; // Prevent multiple clicks
             isProcessing = true;
             captureButton.disabled = true;
+            console.log("Capture photo button clicked.");
 
             try {
                 const context = canvas.getContext('2d');
                 const zoom = parseFloat(zoomSlider.value);
                 const videoWidth = video.videoWidth;
                 const videoHeight = video.videoHeight;
+
+                console.log("Video dimensions:", videoWidth, videoHeight);
+                console.log("Zoom level:", zoom);
 
                 if (videoWidth === 0 || videoHeight === 0) {
                     throw new Error("Video chưa sẵn sàng.");
@@ -394,6 +403,9 @@
                 const scaledHeight = videoHeight / zoom;
                 const sx = (videoWidth - scaledWidth) / 2;
                 const sy = (videoHeight - scaledHeight) / 2;
+
+                console.log("Canvas dimensions:", videoWidth, videoHeight);
+                console.log("Drawing image on canvas:", { sx, sy, scaledWidth, scaledHeight, dx: 0, dy: 0, dWidth: videoWidth, dHeight: videoHeight });
 
                 canvas.width = videoWidth;
                 canvas.height = videoHeight;
@@ -413,9 +425,10 @@
                 signMeaning.textContent = "";
                 speakButton.style.display = 'none'; // Ẩn nút nghe lại khi chụp ảnh
                 loadingPrediction.style.display = 'flex';
+                console.log("Image captured and displayed.");
                 await predictImage();
             } catch (error) {
-                console.error("Lỗi khi chụp ảnh: ", error);
+                console.error("Error capturing photo:", error);
                 alert("Đã xảy ra lỗi khi chụp ảnh. Vui lòng thử lại.");
             } finally {
                 isProcessing = false;
@@ -436,6 +449,7 @@
             document.body.appendChild(link);
             link.click();
             document.body.removeChild(link);
+            console.log("Image downloaded.");
         }
 
         /**
@@ -453,10 +467,12 @@
             signMeaning.textContent = "";
             speakButton.style.display = 'none'; // Ẩn nút nghe lại khi chụp lại
             overlay.style.display = 'block'; // Hiển thị lại overlay khi chụp lại
+            console.log("Retake photo button clicked.");
 
             // Clear canvas
             const context = canvas.getContext('2d');
             context.clearRect(0, 0, canvas.width, canvas.height);
+            console.log("Canvas cleared.");
         }
 
         /**
@@ -485,6 +501,7 @@
             }
 
             synth.speak(utterThis);
+            console.log("Speaking text:", text);
         }
 
         /**
@@ -497,11 +514,11 @@
             try {
                 model = await tmImage.load(modelURLFull, metadataURL);
                 maxPredictions = model.getTotalClasses();
-                console.log("Mô hình đã được tải thành công.");
+                console.log("Model loaded successfully.");
                 loadingModel.style.display = 'none';
                 captureButton.disabled = false;
             } catch (err) {
-                console.error("Lỗi khi tải mô hình: ", err);
+                console.error("Error loading model:", err);
                 alert("Không thể tải mô hình nhận diện. Vui lòng kiểm tra kết nối mạng hoặc URL mô hình.");
                 loadingModel.textContent = "Không thể tải mô hình.";
             }
@@ -519,6 +536,8 @@
 
             try {
                 const prediction = await model.predict(canvas);
+                console.log("Predictions:", prediction);
+
                 if (prediction.length > 0) {
                     // Sắp xếp các dự đoán theo xác suất giảm dần
                     prediction.sort((a, b) => b.probability - a.probability);
@@ -528,24 +547,29 @@
 
                     // Trích xuất mã biển báo từ kết quả nhận diện
                     const signCode = topPrediction.className.substring(0, 5).toUpperCase(); // Đảm bảo mã là chữ hoa
+                    console.log("Sign code extracted:", signCode);
+
                     if (signMeanings.hasOwnProperty(signCode)) {
                         const meaningText = `Ý nghĩa: ${signMeanings[signCode]}`;
                         signMeaning.textContent = meaningText;
                         speakButton.style.display = 'inline-block'; // Hiển thị nút nghe lại
                         speakText(meaningText); // Đọc ra ý nghĩa biển báo
+                        console.log("Sign meaning found:", meaningText);
                     } else {
                         const meaningText = "Ý nghĩa: Không tìm thấy ý nghĩa cho biển báo này.";
                         signMeaning.textContent = meaningText;
                         speakButton.style.display = 'inline-block'; // Hiển thị nút nghe lại
                         speakText(meaningText);
+                        console.log("Sign meaning not found.");
                     }
                 } else {
                     predictionResult.textContent = "Không có kết quả nhận diện.";
                     signMeaning.textContent = "";
                     speakButton.style.display = 'none'; // Ẩn nút nghe lại nếu không có kết quả
+                    console.log("No predictions found.");
                 }
             } catch (err) {
-                console.error("Lỗi khi nhận diện hình ảnh: ", err);
+                console.error("Error predicting image:", err);
                 predictionResult.textContent = "Lỗi khi nhận diện hình ảnh.";
                 signMeaning.textContent = "";
                 speakButton.style.display = 'none'; // Ẩn nút nghe lại nếu có lỗi
@@ -555,13 +579,14 @@
         }
 
         /**
-         * Tải danh sách giọng nói khi chúng đã sẵn sàng
+         * Hàm tải danh sách giọng nói tiếng Việt
          */
         function populateVoices() {
             const synth = window.speechSynthesis;
             const voices = synth.getVoices();
             // Lưu trữ giọng nói tiếng Việt vào một biến global nếu cần
             window.vietnameseVoices = voices.filter(voice => voice.lang.startsWith('vi'));
+            console.log("Voices populated. Vietnamese voices:", window.vietnameseVoices);
         }
 
         // Thêm sự kiện khi danh sách giọng nói thay đổi
@@ -569,7 +594,11 @@
 
         // Khởi chạy camera và tải mô hình khi trang được tải
         window.addEventListener('load', async () => {
+            console.log("Page loaded. Populating voices.");
             // Đợi danh sách giọng nói được tải
+            // Note: speechSynthesis.getVoices() may return an empty array initially
+            // So, it's better to wait a short time before checking
+            await new Promise(resolve => setTimeout(resolve, 100));
             populateVoices();
             await loadModel();
             startCamera();
